# cjson

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
scripts/: tests.sh
src/: lib.rs  main.rs  tests.rs
testdata/errors/: 01.json
